plugins {
	id 'java'
	alias(libs.plugins.spring.boot)
	alias(libs.plugins.spring.dependency.management)
    alias(libs.plugins.sonarqube)
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.tikam'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation libs.spring.boot.starter.data.jpa
	implementation libs.spring.boot.starter.web
	implementation libs.spring.boot.starter.validation
	implementation libs.spring.boot.starter.actuator
	implementation libs.spring.boot.starter.data.elasticsearch
	
	// Redis & Cache
	implementation libs.spring.boot.starter.data.redis
	implementation libs.spring.boot.starter.cache
	
	// Jackson JSR310 for Java 8 Date/Time support
	implementation libs.jackson.datatype.jsr310

	// JWT Dependencies
	implementation libs.jjwt.api
	runtimeOnly libs.jjwt.impl
	runtimeOnly libs.jjwt.jackson

    runtimeOnly 'org.postgresql:postgresql'

	// QueryDSL - Explicitly using string syntax to add 'jakarta' classifier
	implementation "com.querydsl:querydsl-jpa:${libs.versions.querydsl.get()}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${libs.versions.querydsl.get()}:jakarta"

	annotationProcessor libs.jakarta.annotation.api
	annotationProcessor libs.jakarta.persistence.api
	
	compileOnly libs.lombok
	runtimeOnly libs.h2
	annotationProcessor libs.lombok
	
	testImplementation libs.spring.boot.starter.test
	testRuntimeOnly libs.junit.platform.launcher
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    
    // Apache Commons IO
    implementation libs.commons.io
}

// Configure the annotation processor to generate QueryDSL Q-classes
def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
    main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
    options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

clean.doLast {
    file(querydslDir).deleteDir()
}

tasks.named('test') {
	useJUnitPlatform()
}

sonar {
    properties {
        property "sonar.projectKey", "Tikam321_admin-v2"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.organization", "tikam321"
        // Exclude DTOs, Entities, and config from coverage
        property "sonar.exclusions", "**/dto/**, **/entity/**, **/config/**, **/SimpleAdminV2Application.java"
    }
}